feat: Add comprehensive doctor-patient appointment system
- Integrated appointment scheduling with doctor availability management
- Added 10 new REST API endpoints for appointments
- Created frontend components: AppointmentBooking.jsx and DoctorAvailability.jsx
- Implemented tab navigation in Dashboard for Vitals, Consent, Images, and Appointments
- Added database entities: DoctorAvailability and Appointment
- Created services and repositories for appointment management
- Updated security configuration for new endpoints
- Consolidated documentation (removed redundant MD files)
- Enhanced run_all.bat with appointment system information
- Added Quick Start Guide to APPOINTMENT_SYSTEM.md

Backend: Spring Boot + JPA + MySQL
Frontend: React + Vite
Features: Set availability, book appointments, manage appointments, cancel/complete appointments